--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         <input type="text" class="todo-input">
         <button type="submit" class="todo-button">Add</button>
     </form>
+    <div class="todo-container">
+        <ul class="todo-list">
+            <div class="todo">
+            <li></li>
+            <button>delete</button>
+            <button>Checked</button>
+            </div>
+        </ul>
+    </div>
 
     <script src="TodoList.js"></script>
 </body>
