--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <ul class="todo-list">
             <div class="todo">
             <li></li>
-            <button>delete</button>
-            <button>Checked</button>
+            <button></button>
+            <button></button>
             </div>
         </ul>
     </div>
